deploy/kubernetes/overlays/staging/patch-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxscore-frontend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
