deploy/kubernetes/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voxscore
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - staging-megavoz.lab6.cloud
      secretName: voxscore-staging-tls
  rules:
    - host: staging-megavoz.lab6.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: voxscore-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voxscore-frontend
                port:
                  number: 80
